# Tradstry

./: .dockerignore  .env  .env.example  .gitignore  .swp  .vercelignore  AI_ANALYTICS_README.md  BACKEND_INTEGRATION.md  BROKERAGE_ENDPOINTS.md  CI_CD_SETUP.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT.md  GEMINI.md  HTTPS-SETUP-COMPLETE.md  IMPLEMENTATION_SUMMARY_RAG.md  QUICK_DEPLOY.md  README.md  README_SUPABASE.md  REPLICACHE_FIX_SUMMARY.md  REPLICACHE_IMPLEMENTATION_SUMMARY.md  REPLICACHE_MIGRATION_COMPLETE.md  TODO.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.production.yaml  docker-compose.yaml  dockerfile  go.sum  install_setup_functions.sql  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  rich-text-editor-design-plan.md  rich-text-editor.md  setup-github-secrets.md  start.sh  test-deployment.sh  test_direct_providers.py  test_news_job.py  (+1 more)
backend/:  pytest.ini   .env  .env.example  .env.production  .uvrc  AI_SERVICES_MIGRATION_GUIDE.md  AI_SYSTEM_README.md  ANALYTICS_ENDPOINTS_SUMMARY.md  API_USAGE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  GEMINI.MD  GEMINI.md  NOTES_API_DOCUMENTATION.md  NOTES_ENDPOINTS_SUMMARY.md  README.md  README_RAG_SYSTEM.md  README_VOYAGER_SETUP.md  REDIS_SETUP.md  REPORTS_ARCHITECTURE.md  SNAPTRADE_INTEGRATION_GUIDE.md  STREAMING_CHAT_IMPLEMENTATION.md  WARP.md  aapl_transcripts.csv  activate.sh  auth_service.py  celerybeat-schedule.db  config.py  database.py  deploy-all.sh  deploy.sh  docker-compose.celery.yml  dockerfile  env.template  main.py  pyproject.toml  qdrant.sh  real_data_test.py  requirements.txt  scheduler.py  (+14 more)
backend/backup_old_ai_services_20250918_191336/: ai_chat_service.py  ai_orchestrator_service.py  ai_reports_service.py  embedding_service.py  rag_vector_service.py
backend/build-docs/: CALENDAR_CRON_SETUP.md  CLERK_MIGRATION_GUIDE.md  PRICE_ALERT_SETUP.md  README.md  SCHEMA_SYNC_GUIDE.md  SETUP_GUIDE.md  SUPABASE_AUTH_MIGRATION_GUIDE.md  authentication.md  market-data-implementation.md
backend/config/: __init__.py  ai_config.py  prompt_registry.py  routing_config.py
backend/database/: 01_users_table.sql  fix_message_counts.sql
backend/market_data/: README.md  __init__.py  base.py  brain.py  config.py  data_formatter.py  examples.py  market_data_integration.py  orchestrator.py  yfinance_service.py
backend/models/: __init__.py  ai_chat.py  ai_insights.py  ai_reports.py  ai_summary.py  analytics.py  images.py  market_data.py  notes.py  options.py  setups.py  stocks.py  trade_notes.py
backend/routers/: __init__.py  ai_chat.py  ai_dynamic_router.py  ai_insights.py  ai_reports.py  ai_summary.py  analytics.py  images.py  market_data.py  market_data_sync.py  notes.py  options.py  price_cache_health.py  setups.py  stocks.py  symbol_cache_health.py  trade_notes.py
backend/scheduler/: README.md  README_CELERY.md  README_ENHANCED_TRACKING.md  REDIS_CLOUD_SETUP.md  base_scheduler.py  celery_app.py  celery_router.py  celery_service.py  config.py  database_service.py  enhanced_provider_manager.py  market_data_scheduler.py  scheduler_factory.py  scheduler_router.py  tasks.py  trigger_cron_jobs.py
backend/scripts/: celery_management.py  dow30_2025-09-04.csv  sp500_union_unique_2025-09-04.csv  start_celery.sh  start_stock_quotes_scheduler.sh  stop_celery.sh  test_aggregated_stock_quotes.py  test_fundamental_data.py  test_historical_prices.py
backend/services/: __init__.py  ai_chat_service.py  ai_embedding_service.py  ai_insights_service.py  ai_orchestrator_service.py  ai_reports_service.py  (+18 more)
rust-backend/: Cargo.toml
(+1246 files in other folders)
