[package]
name = "Tradstry-backend"
version = "0.0.1"
edition = "2024"

[dependencies]
# Actix Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
actix-multipart = "0.6"

# HTTP client for Turso API calls and Supabase JWT validation
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls-webpki-roots"] }

# Authentication & JWT - Updated for Supabase
# jsonwebtoken = "9.3.0" # Removed for Supabase JWT validation
actix-web-httpauth = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment & configuration
dotenvy = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Database
libsql = "0.9.24"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# URL encoding for API requests
urlencoding = "2.1"

# Cryptography
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
futures-util = "0.3.31"

# Image upload service
uploadcare = "0.1"
tokio = { version = "1.0", features = ["full"] }
# Removed deadpool-redis - using Upstash REST API instead
