[project]
name = "tradistry-backend"
version = "0.1.0"
description = "Backend for Tradistry trading journal and analytics platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "openai>=1.107.3",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-text-splitters>=0.3.11",
    "langsmith>=0.4.28",
    "supabase>=2.18.1",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.1.1",
    "black>=24.0.0",
    "ruff>=0.1.15",
    "mypy>=1.0.0",
]
