[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
thiserror = "1.0.61"
tower-http = { version = "0.5.2", features = ["cors"] }
reqwest = { version = "0.12.5", features = ["json"] }
